--- a/compilation-context/package.json
+++ b/compilation-context/package.json
@@ -9,8 +9,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "react": "^17.0.2"
+  },
   "devDependencies": {
+    "@types/react": "^17.0.34",
     "typescript": "^4.4.4"
   }
 }
